feat: Add a Kafka Consumer with shutdown